# small_technical_task

./: CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/cpp/: accountMgr.cpp  main.cpp
src/h/: abstractAccount.h  account.h  accountId.h  accountMgr.h  enterpriseAccount.h  personAccount.h  singletonUniqueIdGenerator.h  visitor.h
tst/: CMakeLists.txt  account_test.cpp
